from typing import Protocol

from src.modules.observability.domain.node_metrics import NodeMetrics


class MetricsRepository(Protocol):
    async def upsert(self, metrics: NodeMetrics) -> None: ...

    async def get_latest(self, node_id: str) -> NodeMetrics | None: ...

    async def list_latest(self) -> list[NodeMetrics]: ...

    async def get_prev(self, node_id: str) -> NodeMetrics | None: ...

    async def add_latency(self, node_id: str, latency_ms: float) -> None: ...
